Sun Dec 30  10:40:08 2001 CET Mikael Hermansson <tyan@linux.se>

  * gtksourcebuffer.c: 
     - get rid of connect_[before/after] signals on "insert/delete" callbacks.
        Now the sourcebuffer is  virtually overidding the default insert_text/delete_range handlers.
  * gtksourceview.c:
      - adding Undo/Redo to popupmenu

Mon Dec 17  06:38:30 2001 CET Mikael Hermansson <tyan@linux.se>

  * gtksourceview.[c/h] changed GtkSourceView->delete to delete_range.

2001-12-15  Dave Camp  <dave@ximian.com>

	* src/gtksourceview.c (get_line_marker): New function.
	(draw_line_markers): New function.
	(gtk_source_view_expose): Rewritten to be a bit clearer, and to not add one to marker line numbers.
	(get_lines): Removed.
	* src/gtksourcebuffer.c (gtk_source_buffer_line_add_marker): Changed line < line_number to line_number > line (the off-by-one is on purpose) and make it a g_return_if_fail()
	(gtk_source_buffer_line_set_marker): Ditto.

Tue Dec 11 04:48:45 PM PST 2001 Chris Phelps <chicane@reninet.com>
    * gtksourceview.c: remove some deprecated calls to gdk_string_width() with pango_layout action.

Mon Dec 10 04:58:22 PM PST 2001 Chris Phelps <chicane@reninet.com>
    * Modified gtksourcebuffer line marker api to allow for multiple markers per line.
    * Added a a few new marker related functions for convenience purposes and completeness
    * Update gtksourceview to deal with multiple markers per line (composite pixbufs)

2001-12-09  Dave Camp  <dave@ximian.com>

	* src/gtksourcebuffer.h: Fixed a broken comment.

Sat Dec 08  03:46:47 2001 CET Mikael Hermansson <tyan@linux.se>

  * Hmm It's time to start contribute to my old project again. Nothing new so far except I have changed ISP provider and my new email is tyan@linux.se.
    Maybe I have some old/new stuff in my local source repository (at http://tyan.homeip.net) but it looks like like Chris has already done some good stuff :-)  

Thu Dec 06 02:25:29 AM PST 2001 Chris Phelps <chicane@reninet.com>